# ec2-ami-tools

./: .frlog  .gitignore  Makefile.am  NEWS  README  configure.ac
debian/: README  changelog  control  copyright  lintian  rules
ec2-ami-tools-1.4.0.1/lib/ec2/amitools/: version.rb
